# pdfocr

./: .gitignore  Dockerfile  README.md  app.js  nautilus-job.yaml  package-lock.json  package.json  pod.yaml  pyproject.toml  random_pages.py  rwm-pvc.yaml  volpod.yaml
src/pdfocr/: __init__.py  main.py
